--- a/package.json
+++ b/package.json
@@ -55,13 +55,18 @@
     "lucide-react": "^0.454.0",
     "next": "^14.2.24",
     "next-themes": "^0.4.4",
-    "react": "^18.2.0",
+    "ogl": "^1.0.11",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-horizontal-scrolling-menu": "^8.2.0",
     "react-leaflet": "^4.0.0",
+    "react-multi-carousel": "^2.8.5",
     "react-resizable-panels": "^2.1.7",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^7.3.0",
+    "react-router-hash-link": "^2.4.3",
     "recharts": "2.15.0",
     "sass": "latest",
     "sass-embedded": "latest",
